# multilevel-sim

./: .gitignore  Cargo.toml  README.md
lib/: dynamics.rs  gfactors.rs  hilbert.rs  lib.rs  nd_utils.rs  rabi.rs  utils.rs
lib/systems/: clock_motion.rs  mod.rs  ququart.rs  rydberg_generic.rs  telecom.rs
multilevel-sim/: Cargo.toml
multilevel-sim/lib/: dynamics.rs  dynamics_old.rs  hilbert.rs  lib.rs  rabi.rs  rabi_old.rs  spin.rs  utils.rs
multilevel-sim/lib/dynamics/: mod.rs
multilevel-sim/lib/rabi/: lindblad.rs  liouville.rs  mod.rs  schrodinger.rs
output/: cz_amplitudes.txt
src/: clock.rs  clock_motion.rs  clock_motion_plot.py  lp_cz_xi_test.py  ququart_cccz.rs  ququart_cccz_gate_fidelity.py  ququart_cccz_phases.py  ququart_cccz_plot.py  ququart_clock_corpse.rs  ququart_clock_corpse_plot.py  ququart_clock_energies_plot.py  ququart_clock_pi2pi2.rs  ququart_clock_pi2pi2_pulselen_scan_plot.py  ququart_clock_pipi.rs  ququart_clock_pipi_det2scan_plot.py  ququart_clock_pipi_plot.py  ququart_cz.rs  ququart_cz_gate_fidelity.py  ququart_cz_phases.py  ququart_cz_plot.py  rydberg_generic.rs  rydberg_generic_plot.py  telecom-raman.rs  telecom-raman_plot.py
workspace/: Cargo.toml  run.nu
workspace/lib/: lib.rs  vector.rs
workspace/lib/systems/: cavity_array.rs  clock_motion.rs  free_photon.rs  mod.rs  motion_simple.rs  quoct.rs  ququart.rs  rydberg_generic.rs  telecom.rs  time_bin.rs
workspace/src/: cavity_array.rs  clock.rs  clock_motion.rs  free_photon.rs  lp_cz_xi.py  motion_simple.rs  motion_simple_optim.rs  quoct.rs  quoct_ccz_optim.rs  quoct_mpp.rs  ququart_cccz.rs  ququart_cccz_plot.py  ququart_clock_corpse.rs  ququart_clock_pi2pi2.rs  ququart_clock_pipi.rs  ququart_cz.rs  rydberg_generic.rs  telecom-raman-test.py  telecom-raman.rs  telecom_raman.rs  time_bin.rs
workspace/src/cavity_array/: 1-plot-time-evolution.py
workspace/src/cavity_array/0/: 0-plot-phase-diagram.py  1-plot-time-evolution.py
workspace/src/clock/: plot.py
workspace/src/clock_motion/: plot.py
workspace/src/free_photon/: plot.py
workspace/src/motion_simple/: plot.py
workspace/src/motion_simple/0/: plot-figures.py  plot-vector.py
workspace/src/motion_simple_optim/: rabi_trap_freqs.py
workspace/src/quoct_mpp/: plot.py
workspace/src/quoct_mpp/0/: plot_rabi_scan.py
workspace/src/ququart_clock_corpse/0/: rabiscan.py
workspace/src/ququart_clock_pi2pi2/: plot.py
workspace/src/ququart_clock_pipi/: det2scan.py  detscan.py
workspace/src/ququart_cz/0/: gate_fidelity.py  phases.py
workspace/src/time_bin/: 0-plot.py.disabled  1-purity.py.disabled  2-plot_reg2.py.disabled  3-purity_reg2.py.disabled  4-photon_states.py.disabled  5-detector_probs.py  6-analysis.py  6-analysis.py.disabled
workspace/src/time_bin/0/: projections.py
(+12 files in other folders)
