[package]
name = "workspace"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
multilevel-sim = { path = "../multilevel-sim", version = "*" }
itertools = "0.11.0"
num-complex = "0.4.4"
ndarray = "0.15.6"
# ndarray-npy = "0.8.1"
# rustfft = "6.1.0"
# ndrustfft = "*"
# rand = "0.8.5"
# regex = "1.10.2"
# rmpfit = "*"
# thiserror = "*"
anyhow = "1.0.75"
rayon = "1.10.0"

[dependencies.ndarray-linalg]
version = "0.16.0"
features = [ "openblas-system",]

[lib]
path = "lib/lib.rs"
name = "lib"

[[bin]]
path = "src/rydberg_generic.rs"
name = "rydberg_generic"

[[bin]]
path = "src/free_photon.rs"
name = "free_photon"

[[bin]]
path = "src/clock.rs"
name = "clock"

[[bin]]
path = "src/clock_motion.rs"
name = "clock_motion"

[[bin]]
path = "src/ququart_cccz.rs"
name = "ququart_cccz"

[[bin]]
path = "src/ququart_cz.rs"
name = "ququart_cz"

[[bin]]
path = "src/ququart_clock_pipi.rs"
name = "ququart_clock_pipi"

[[bin]]
path = "src/ququart_clock_pi2pi2.rs"
name = "ququart_clock_pi2pi2"

[[bin]]
path = "src/ququart_clock_corpse.rs"
name = "ququart_clock_corpse"

[[bin]]
path = "src/telecom_raman.rs"
name = "telecom_raman"

[[bin]]
path = "src/time_bin.rs"
name = "time_bin"

[[bin]]
path = "src/cavity_array.rs"
name = "cavity_array"

[[bin]]
path = "src/motion_simple.rs"
name = "motion_simple"

[[bin]]
path = "src/motion_simple_optim.rs"
name = "motion_simple_optim"

[profile.release]
lto = true
panic = "abort"
